test/corpus/annotations.txt
==================
Single-line annotation
==================
:: note :: This is a note
---

(document
  (annotation_single
    (annotation_marker)
    (annotation_header)
    (annotation_close)
    (annotation_inline_text)))

==================
Single-line annotation without text
==================
:: warning ::
---

(document
  (annotation_single
    (annotation_marker)
    (annotation_header)
    (annotation_close)))

==================
Block annotation
==================
:: info ::
    Some information here
---

(document
  (annotation_block
    (annotation_marker)
    (annotation_header)
    (annotation_close)
    (paragraph
      (text_line
        (line_content
          (text_content))))))

==================
Block annotation with inline text and body
==================
:: note :: Important
    Details follow here
---

(document
  (annotation_block
    (annotation_marker)
    (annotation_header)
    (annotation_close)
    (annotation_inline_text)
    (paragraph
      (text_line
        (line_content
          (text_content))))))

==================
Annotation inline text with formatting
==================
:: note :: This is *important* text
---

(document
  (annotation_single
    (annotation_marker)
    (annotation_header)
    (annotation_close)
    (annotation_inline_text
      (strong))))

==================
Annotation inline text with multiple inlines
==================
:: note :: See [ref] and `code` here
---

(document
  (annotation_single
    (annotation_marker)
    (annotation_header)
    (annotation_close)
    (annotation_inline_text
      (reference
        (general_reference))
      (code_span))))
