test/corpus/document_titles.txt
==================
Simple document title
==================
My Document Title

Content paragraph here.
---

(document
  (document_title
    title: (line_content
      (text_content))
    (blank_line))
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Document title with inline formatting
==================
A *Bold* Title

Content here.
---

(document
  (document_title
    title: (line_content
      (text_content
        (strong)))
    (blank_line))
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Document title followed by session
==================
My Document

1. First Session

    Session content.
---

(document
  (document_title
    title: (line_content
      (text_content))
    (blank_line))
  (session
    title: (line_content
      (list_marker)
      (text_content))
    (paragraph
      (text_line
        (line_content
          (text_content))))))

==================
Document title with subtitle
==================
My Title:
A Subtitle Here

Content paragraph.
---

(document
  (document_title
    title: (line_content
      (subject_content))
    (document_subtitle
      subtitle: (line_content
        (text_content)))
    (blank_line))
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Document title with subtitle and inline formatting
==================
*Sapiens*:
A Brief History of _Humankind_

Content here.
---

(document
  (document_title
    title: (line_content
      (subject_content))
    (document_subtitle
      subtitle: (line_content
        (text_content
          (emphasis))))
    (blank_line))
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
No title when session is first
==================
1. Introduction

    This is a session, not a document title.
---

(document
  (session
    title: (line_content
      (list_marker)
      (text_content))
    (paragraph
      (text_line
        (line_content
          (text_content))))))

==================
Two lines before blank parsed as title+subtitle by tree-sitter
==================
First line
Second line continues the paragraph.

Third paragraph.
---

; NOTE: tree-sitter parses two lines + blank as title+subtitle because it
; cannot check whether the first line ends with a colon (CST limitation).
; The lex-core parser correctly rejects this as a title because the first
; line does NOT end with a colon.

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))
    (text_line
      (line_content
        (text_content))))
  (blank_line)
  (paragraph
    (text_line
      (line_content
        (text_content)))))
