test/corpus/inlines.txt
==================
Code span
==================
Here is `some code` in text
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (code_span))))))

==================
Math span
==================
The formula #x + y = z# is important
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (math_span))))))

==================
Reference
==================
See [https://example.com] for details
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (url_reference)))))))

==================
Escape sequence
==================
Use \* for literal asterisk
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (escape_sequence))))))

==================
Multiple inline elements
==================
Text `code` and #math# and [ref]
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (code_span)
          (math_span)
          (reference
            (general_reference)))))))

==================
Unmatched backtick
==================
This ` is not code
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Escaped backtick
==================
This \` is escaped
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (escape_sequence))))))

==================
Code span with special chars
==================
Run `:: not annotation ::` in shell
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (code_span))))))

==================
Multiple references on one line
==================
See [Section 1] and [Section 2] for details
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (general_reference))
          (reference
            (general_reference)))))))

==================
Strong (bold)
==================
This is *bold* text
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (strong))))))

==================
Emphasis (italic)
==================
This is _italic_ text
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (emphasis))))))

==================
Strong and emphasis on same line
==================
Here is *bold* and _italic_ together
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (strong)
          (emphasis))))))

==================
Unmatched asterisk
==================
7 * 8 = 56
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Strong with multiple words
==================
This has *all major features* inside
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (strong))))))

==================
All inline elements together
==================
Text *bold* _italic_ `code` #math# [ref]
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (strong)
          (emphasis)
          (code_span)
          (math_span)
          (reference
            (general_reference)))))))

==================
Escaped asterisk not strong
==================
Use \* not bold \* here
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (escape_sequence)
          (escape_sequence))))))

==================
Emphasis nested inside strong
==================
*bold _and italic_ inside*
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (strong
            (emphasis)))))))

==================
Strong nested inside emphasis
==================
_italic *and bold* inside_
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (emphasis
            (strong)))))))

==================
Code span inside strong
==================
*bold with `code` inside*
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (strong
            (code_span)))))))

==================
Reference inside emphasis
==================
_see [Section 1] for details_
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (emphasis
            (reference
              (general_reference))))))))

==================
Word-adjacent asterisk not strong
==================
word*not bold*here
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Word-adjacent underscore not emphasis
==================
snake_case_name
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Strong at line start
==================
*bold* at start
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (strong))))))

==================
Strong at line end
==================
text is *bold*
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (strong))))))

==================
Multiple arithmetic expressions
==================
Calculate 7 * 8 + 3 * 4
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Unclosed asterisk at line start
==================
*List preceding blank: at root level, lists require a blank line.
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Unclosed underscore at line start
==================
_value is stored in the database and never cleared.
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))))

==================
Bold with unclosed asterisk on same line
==================
A formula: F = m*a where *a* is acceleration.
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (strong))))))

==================
Citation reference
==================
See [@jones-2023] for details
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (citation_reference)))))))

==================
Annotation reference
==================
As noted [::important] previously
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (annotation_reference)))))))

==================
URL reference
==================
Visit [https://example.com/path] now
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (url_reference)))))))

==================
File reference
==================
See [./data/results.csv] for data
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (file_reference)))))))

==================
Session reference
==================
As discussed in [#3.2] above
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (session_reference)))))))

==================
ToCome reference bare
==================
Add content here [TK] later
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (tocome_reference)))))))

==================
ToCome reference with identifier
==================
Insert [TK-budget] when ready
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (tocome_reference)))))))

==================
Number reference
==================
See footnote [42] for details
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (number_reference)))))))

==================
All reference types in one line
==================
Refs: [@cite] [::fn] [https://url] [./file] [#1] [TK] [42] [General]
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content
          (reference
            (citation_reference))
          (reference
            (annotation_reference))
          (reference
            (url_reference))
          (reference
            (file_reference))
          (reference
            (session_reference))
          (reference
            (tocome_reference))
          (reference
            (number_reference))
          (reference
            (general_reference)))))))
