test/corpus/lists.txt
==================
Simple dash list
==================
- First item
- Second item
---

(document
  (list
    (list_item
      (list_marker)
      (text_content))
    (list_item
      (list_marker)
      (text_content))))

==================
Three item dash list
==================
- Alpha
- Beta
- Gamma
---

(document
  (list
    (list_item
      (list_marker)
      (text_content))
    (list_item
      (list_marker)
      (text_content))
    (list_item
      (list_marker)
      (text_content))))

==================
Numbered list
==================
1. First
2. Second
---

(document
  (list
    (list_item
      (list_marker)
      (text_content))
    (list_item
      (list_marker)
      (text_content))))

==================
List item with nested content
==================
- Item one
    Continuation text
- Item two
---

(document
  (list
    (list_item
      (list_marker)
      (text_content)
      (paragraph
        (text_line
          (line_content
            (text_content)))))
    (list_item
      (list_marker)
      (text_content))))

==================
Alphabetical list
==================
a. First
b. Second
---

(document
  (list
    (list_item
      (list_marker)
      (text_content))
    (list_item
      (list_marker)
      (text_content))))

==================
List item with inline formatting
==================
- Item with *bold* and [ref]
- Second _italic_ item
---

(document
  (list
    (list_item
      (list_marker)
      (text_content
        (strong)
        (reference
          (general_reference))))
    (list_item
      (list_marker)
      (text_content
        (emphasis)))))

==================
List item with code span
==================
- Use `command` here
- Another item
---

(document
  (list
    (list_item
      (list_marker)
      (text_content
        (code_span)))
    (list_item
      (list_marker)
      (text_content))))

==================
List without preceding blank line
==================
Paragraph text here
- First item
- Second item
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content))))
  (list
    (list_item
      (list_marker)
      (text_content))
    (list_item
      (list_marker)
      (text_content))))

==================
Single list-like line stays in paragraph
==================
Some text
- Not a list since only one item
More text
---

(document
  (paragraph
    (text_line
      (line_content
        (text_content)))
    (dialog_line
      (list_marker)
      (text_content))
    (text_line
      (line_content
        (text_content)))))

==================
Extended list markers
==================
1. Outer one
    1.a Middle one
        1.a.1 Inner one
        1.a.2 Inner two
    1.b Middle two
2. Outer two
---

(document
  (list
    (list_item
      (list_marker)
      (text_content)
      (list
        (list_item
          (list_marker)
          (text_content)
          (list
            (list_item
              (list_marker)
              (text_content))
            (list_item
              (list_marker)
              (text_content))))
        (list_item
          (list_marker)
          (text_content))))
    (list_item
      (list_marker)
      (text_content))))

==================
Extended markers with trailing dot
==================
1. First
    1.a. Sub-first
    1.b. Sub-second
2. Second
---

(document
  (list
    (list_item
      (list_marker)
      (text_content)
      (list
        (list_item
          (list_marker)
          (text_content))
        (list_item
          (list_marker)
          (text_content))))
    (list_item
      (list_marker)
      (text_content))))

==================
Numbered session title with marker
==================
1. Introduction

    Session content here
---

(document
  (session
    title: (line_content
      (list_marker)
      (text_content))
    (paragraph
      (text_line
        (line_content
          (text_content))))))
